--- a/LeafDiseaseDetection1/src/main/webapp/userDashboard.html
+++ b/LeafDiseaseDetection1/src/main/webapp/userDashboard.html
@@ -9,7 +9,7 @@
     <h3><a href="profile">Profile</a></h3>
     <h3><a href="changePass.html">Change Password</a></h3>
     <h3><a href="uploads.html">View Uploads</a></h3>
-    <h3><a href="feedback.html">Give Feedback</a></h3>
+    <h3><a href="feedback.jsp">Give Feedback</a></h3>
     <h2><a href="index.html">LogOut</a></h2>
 </body>
 </html>
