--- a/LeafDiseaseDetection1/src/main/webapp/index.html
+++ b/LeafDiseaseDetection1/src/main/webapp/index.html
@@ -9,5 +9,7 @@
     <hr>
     <h2><a href="login.html">Login</a></h2>
     <h2><a href="register.html">Register</a></h2>
+    <h2><a href="adminReg.jsp">Admin Register</a></h2>
+    <h2><a href="adminLog.jsp">Admin Login</a></h2>
 </body>
 </html>
