--- a/LeafDiseaseDetection1/src/main/webapp/changePass.html
+++ b/LeafDiseaseDetection1/src/main/webapp/changePass.html
@@ -24,7 +24,8 @@
             if (value === value2) {
                // alert("Passwords Matched!");
                event.target.submit();
-            } else {
+            } 
+            else {
                 alert("Passwords do not match!");
             }
         }
